# invoice

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.zig  build.zig.zon
examples/ofd-converted/: dzfp_26312000002413346011_20260420181709.xml
libs/: fetch_sqlite.sh
libs/miniz/: miniz_export.h
src/: archive.rs  archive.zig  attachment.rs  attachment.zig  cli.rs  cli.zig  closing.rs  closing.zig  db.rs  db.zig  extract_image.rs  extract_ofd.rs  extract_pdf.rs  extract_xml.rs  import.rs  main.rs  main.zig  mcp.rs  models.rs  models.zig  ocr.rs  ops.rs  report.rs  report.zig
