[package]
name = "invoice"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rust_xlsxwriter = "0.79"
pdf_oxide = "0.3"
roxmltree = "0.20"
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"
