[package]
name = "invoice"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled"] }
rust_xlsxwriter = "0.95"
pdf_oxide = { version = "0.3", features = ["ocr"] }
reqwest = { version = "0.13", features = ["blocking", "native-tls"] }
roxmltree = "0.21"
zip = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
chrono = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"
